# wren-project

./: .gitignore  Cargo.toml  DEVELOPING.md  DEVELOPING.ru.md  README.md  README.ru.md  TODO.md  USAGE.md  USAGE.ru.md  clippy.toml  meson.build  meson_options.txt  rustfmt.toml  wren-project.md  wren-project.ru.md
.github/workflows/: ci.yml  release.yml
build-aux/: cargo.sh
build-aux/flatpak/: cargo-sources.json  io.github.j0ck4.Wren.Devel.json  io.github.j0ck4.Wren.flathub.json  io.github.j0ck4.Wren.json
data/: io.github.j0ck4.Wren.desktop.in.in  io.github.j0ck4.Wren.metainfo.xml.in.in  meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES.in
polkit/: io.github.j0ck4.Wren.policy  meson.build
src/: application.rs  autostart.rs  config.rs.in  detail.rs  detail.ui  edit_dialog.rs  edit_dialog.ui  main.rs  meson.build  models.rs  qr_dialog.rs  resources.gresource.xml  storage.rs  tray.rs  wg.rs  window.rs  window.ui
src/models/: tunnel.rs
src/wg/: manager.rs  parser.rs  serializer.rs
